Navbar now mostly done. Still need a fix for the situation where the navbar gets fixated to the top of the window while being expanded and then gets collapsed.

--- a/css/main.less
+++ b/css/main.less
@@ -107,6 +107,50 @@ h1 {
 
 	}
 
+	ul {
+
+		display: none;
+
+	}
+
+	.navbar-text {
+		display: none;
+	}
+
+	#social-media-section {
+
+		padding-top: 10px;
+		padding-bottom: 10px;
+		display: inline-block;
+
+	}
+
+	.social-media {
+
+		margin-left: 10px;
+		margin-right: 10px;
+
+	}
+
+	.social-media:hover {
+
+		background-color: @dark-grey;
+
+	}
+
+	button {
+
+		float: right;
+		margin-top: 8px;
+		background-color: @black;
+		color: white;
+		border-color: @gig-border;
+
+	}
+
+}
+
+#navbar.expanded {
 
 	ul {
 
@@ -191,10 +235,7 @@ h1 {
 
 		#social-media-section {
 
-			display: initial;
 			float: right;
-			padding-top: 10px;
-			padding-bottom: 10px;
 
 		}
 
@@ -209,6 +250,12 @@ h1 {
 		.social-media:hover {
 
 			background-color: @dark-grey;
+
+		}
+
+		button {
+
+			display: none;
 
 		}
 
